--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "eslint-loader": "^2.1.1",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "html2canvas": "^1.2.1",
+    "save-svg-as-png": "^1.4.17"
   }
 }
